[package]
authors = ["David Campbell <dcampbell24@gmail.com>"]
build = "build.rs"
description = "Raw IUP bindings for Rust"
homepage = "https://github.com/dcampbell24/iup-rust/tree/master/iup-sys"
keywords = ["bindings", "gui", "iup"]
license = "MIT"
links = "IUP"
name = "iup-sys"
repository = "https://github.com/dcampbell24/iup-rust/tree/master/iup-sys"
version = "0.0.1"

[lib]
name = "iup_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.1"
